<?xml version="1.0"?>
<package format="3">
  <name>data_recorder</name>
  <version>1.0.0</version>
  <description>data_recorder</description>

  <maintainer email="Hello@gmail.com">Kinetis</maintainer>

  <license>TODO</license>

  <author>Hello</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

</package>
